# EBM-Perturb-MAP

./: .gitignore  CD-usage.md  MODULAR_EBM_FRAMEWORK.md  Perturb_MAP.html  README.md  design-document.md  pyproject.toml  pytest.ini  run_tests.py
configs/: contrastive_divergence.yaml  default.yaml  dirac3_digit6.yaml  hexaly_digit6.yaml  mnist_digit6.yaml  persistent_cd.yaml  perturb_map.yaml  scip.yaml  test_quick.yaml
experiments/: run_inference.py  run_inference_cd.py  train_and_infer_qubo.py  train_rbm.py  train_rbm_cd.py
notebooks/: demo_rbm_package.ipynb
src/rbm/: __init__.py  cli_inference.py  cli_train.py
src/rbm/data/: __init__.py  mnist.py
src/rbm/inference/: __init__.py  generation.py  reconstruction.py
src/rbm/models/: __init__.py  hybrid.py  rbm.py
src/rbm/solvers/: __init__.py  base.py  dirac.py  gurobi.py  hexaly.py  scip.py
src/rbm/training/: __init__.py  metrics.py  trainer.py  training_manager.py
src/rbm/training/comparison/: __init__.py  example_comparison.py  framework.py  metrics.py
src/rbm/training/methods/: __init__.py  base.py  contrastive_divergence.py  perturb_map.py
src/rbm/training/samplers/: __init__.py  base.py  gibbs_sampler.py  qubo_sampler.py
src/rbm/utils/: __init__.py  config.py  visualization.py
test_qubo/: pm_training_summary.txt  qubo_solver_stats.txt
test_qubo/run1/: pm_training_summary.txt  qubo_solver_stats.txt  rbm_pm_checkpoint.pth
tests/: conftest.py  requirements.txt  test_config_validation.py  test_gurobi_solver.py  test_hexaly_solver.py  test_package.py  test_samplers.py  test_scip_solver.py  test_solver_comparison.py  test_three_solver_comparison.py  test_training_manager.py  test_training_methods.py
