[project]
name = "rbm"
version = "0.1.0"
description = "Restricted Boltzmann Machines with Perturb-and-MAP training using QUBO solvers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RBM Research Team"},
]
keywords = ["machine learning", "rbm", "qubo", "perturb-and-map", "quantum annealing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=12.0.2"]
scip = ["pyscipopt>=5.5.0"]
hexaly = ["hexaly-optimizer"]
dirac = ["eqc-models>=0.12.0"]
all = ["gurobipy>=12.0.2", "pyscipopt>=5.5.0", "hexaly-optimizer", "eqc-models>=0.12.0"]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
train-rbm = "rbm.cli_train:main"
run-inference = "rbm.cli_inference:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rbm*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=rbm --cov-report=html --cov-report=term-missing"
